--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <h2>This is a demo for Bus Sys App Dev</h2>
                 <p> 1 am a senior at OSU.</p>
                 <p> My major is MIS.</p>
+                <p> Link: <a href="//github.com/kasheenperdue/FrontEndWorkshop"> Github</a></p>
             </div>
 
             <div class ="footer">Copyright @ Kasheen Perdue 2026</div>
